--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 	   -moz-box-shadow: 0 0px 10px 0px black;
 	        box-shadow: 0 0px 10px 0px black;
 	z-index: 98;
+    margin: 0px;
+    padding: 0px;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
@@ -13,6 +15,7 @@ body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+    padding:0;
 }
 
 a {
@@ -43,6 +46,7 @@ header {
     right: 0;
     background: rgba(46,46,46,0.95);
     z-index: 300;
+    padding:0;
 }
 
 .header-logo, .header-logo:hover {
@@ -117,14 +121,19 @@ header ul li.inactive:hover {
 }
 
 
-.bebas {
-    font-family: "Bebas";
+.pt-serif {
+    font-family: 'PT Serif', serif;
+    font-variant: small-caps;
     word-spacing: 0.2em;
     z-index: 99;
 }
 
-h1 .bebas {
+h1 .pt-serif {
 	margin-top: 50px;
+}
+
+.lora{
+    font-family: 'Lora', serif;
 }
 
 .intro {
@@ -255,8 +264,10 @@ h1 .bebas {
 #article {
     min-height: 700px;
     padding-bottom: 100px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top:0px;
+    margin:0px;
 }
 
 #article h1 {
@@ -268,10 +279,15 @@ h1 .bebas {
 
 #article .byline {
     text-align: center;
+    font-style: italic;
+}
+
+#article .byline > a {
+    font-style: normal;
 }
 
 #article-contents {
-    font-family: 'Droid Serif', sans-serif;
+    font-family: 'Georgia', sans-serif;
     max-width: 650px;
     margin: 40px auto 0;
     font-size: 14px;
@@ -290,6 +306,11 @@ h1 .bebas {
     font-style: italic;
     font-size: 0.9em;
     margin-top: 24px;
+}
+
+#article-header {
+    background-size: cover;
+    background-image: url("http://survivalguideforsmallbusiness.com/wp-content/uploads/2010/11/bank-building.jpg")
 }
 
 #article-contents h2 {
