--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	-webkit-box-shadow: 0 0px 10px 0px black;
 	   -moz-box-shadow: 0 0px 10px 0px black;
 	        box-shadow: 0 0px 10px 0px black;
-	z-index: 98;
+	z-index: 980;
     margin: 0px;
     padding: 0px;
 }
@@ -16,6 +16,9 @@ body {
 	width: 100%;
 	height: 100%;
     padding:0;
+}
+div {
+    display:block;
 }
 
 a {
@@ -47,6 +50,15 @@ header {
     background: rgba(46,46,46,0.95);
     z-index: 300;
     padding:0;
+}
+#header-image {
+    background-position: center ;
+    background-attachment: fixed;
+    height:456px;
+    background-image: url("graphics/fedit3.jpg");
+    background-size: cover;
+    opacity: .7;
+
 }
 
 .header-logo, .header-logo:hover {
@@ -126,6 +138,7 @@ header ul li.inactive:hover {
     font-variant: small-caps;
     word-spacing: 0.2em;
     z-index: 99;
+    color:white;
 }
 
 header > h1 .pt-serif {
@@ -276,13 +289,30 @@ header > h1 .pt-serif {
     margin-top: 36px;
     margin-bottom: 5px;
     font-size: 4em;
-    text-align: center;
+    text-align: right;
 }
 
 #article .byline {
     text-align: center;
     font-style: italic;
     font-size:20px;
+    position: absolute;
+    z-index: 1;
+    padding-top: 400px;
+    width: 100%;
+    text-align: right;
+    opacity: 1;
+    color:white;
+}
+
+#hmc-title {
+    position: absolute;
+    z-index: 1;
+    padding-top: 290px;
+    padding-left:390px;
+    text-align: right;
+    opacity: 1;
+    letter-spacing: 5px;
 }
 
 #article .byline > a {
@@ -312,9 +342,14 @@ header > h1 .pt-serif {
 }
 
 #article-header {
-    height: 300px;
     background-size:cover;
-    background-image: url("http://survivalguideforsmallbusiness.com/wp-content/uploads/2010/11/bank-building.jpg")
+    background: -webkit-linear-gradient( rgba(255,0,0,0), rgba(255,0,0,.3),rgba(255,0,0,1)); /* For Safari 5.1 to 6.0 */
+    background: -webkit-linear-gradient(rgba(0,0,0,1),rgba(255,0,0,.3), rgba(255,0,0,0)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(0,0,0,1),rgba(255,0,0,.3), rgba(255,0,0,0)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(0,0,0,1),rgba(255,0,0,.3), rgba(255,0,0,0)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(255,0,0,0),rgba(40,0,0,.6),rgba(0,0,0,1)); /* Standard syntax (must be last) */(rgba(0,0,0,1),rgba(30,0,0,.3), rgba(255,0,0,0)); /* Standard syntax (must be last) */
+    opacity: 1;
+}
 }
 
 #article-contents h2 {
