--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ header > h1 .pt-serif {
 #article h1 {
     margin-top: 36px;
     margin-bottom: 5px;
-    font-size: 4em;
+    font-size: 4.3em;
     text-align: right;
 }
 
@@ -308,8 +308,8 @@ header > h1 .pt-serif {
 #hmc-title {
     position: absolute;
     z-index: 1;
-    padding-top: 290px;
-    padding-left:390px;
+    padding-top: 300px;
+    padding-left:330px;
     text-align: right;
     opacity: 1;
     letter-spacing: 5px;
@@ -317,6 +317,7 @@ header > h1 .pt-serif {
 
 #article .byline > a {
     font-style: normal;
+    color:white;
 }
 
 #article-contents {
