--- a/style.css
+++ b/style.css
@@ -514,14 +514,14 @@ header > h1 .pt-serif {
 
 .context-quote-left {
     left: 0;
-    margin-left: -105px;
+    margin-left: -216px;
     float: left;
     margin-right: 10px;
 }
 
 .context-quote-right {
     right: 0;
-    margin-right: -105px;
+    margin-right: -216px;
     float: right;
     margin-left: 10px;
 }
@@ -574,6 +574,17 @@ header > h1 .pt-serif {
 
 .context-quote-body ul {
     padding-left: 13px;
+}
+
+
+@media (max-width: 1090px) {
+    .context-quote-left {
+        margin-left: -105px;
+    }
+
+    .context-quote-right {
+        margin-right: -105px;
+    }
 }
 
 
