--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+
+@media (max-width: 600px){
+    #container {
+        display: none !important;
+    }
+}
+
 #container {
 	position:fixed;
 	bottom:0;
