--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,7 @@ header ul li.inactive:hover {
     color:white;
 }
 
-#article-contents {
+.article-contents {
     font-family: 'Georgia', sans-serif;
     max-width: 650px;
     margin: 40px auto 0;
@@ -308,7 +308,7 @@ header ul li.inactive:hover {
     line-height: 1.5em;
 }
 
-#article-contents section:not(:first-child) {
+.article-contents section:not(:first-child) {
     margin-top: 40px;
 }
 
@@ -328,7 +328,7 @@ header ul li.inactive:hover {
     opacity: 1;
 }
 
-#article-contents h2 {
+.article-contents h2 {
     font-size: 3em;
     text-align: left;
     line-height: 100%;
@@ -339,7 +339,7 @@ header ul li.inactive:hover {
     color: #062472;
 }
 
-#article-contents p:last-child {
+.article-contents p:last-child {
     margin-bottom: 0;
 }
 
@@ -394,11 +394,11 @@ header ul li.inactive:hover {
         font-size: 3em;
     }
 
-    #article-contents {
+    .article-contents {
         padding: 0 20px;
     }
 
-    #article-contents .section-title {
+    .article-contents .section-title {
         font-size: 2em;
     }
 
@@ -566,4 +566,33 @@ header ul li.inactive:hover {
 }
 
 
+/* ADS */
+
+.leader-ad {
+    margin: 0 auto 40px auto;
+    width: 728px;
+    padding: 5px;
+    border: 1px solid #aaa;
+}
+
+.ad-tag {
+    width: 728px;
+    padding-left: 5px;
+    margin: 0 auto;
+    font-size: 0.7em;
+    text-transform: uppercase;
+}
+
+.pad-ad-tag {
+    margin-top: 20px;
+}
+
+@media (max-width: 728px) {
+    .leader-ad {
+        display: none;
+    }
+    .ad-tag {
+        display: none;
+    }
+}
 
